--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -24,6 +24,7 @@ tap:
   roles:
     - name: external-dns 
     - name: contour
+    - name: letsencrypt-issuer
     - name: tap-full
       options:
         tap_install:
