--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -4,6 +4,15 @@ default:
    - name: cert-manager
    - name: contour
    - name: letsencrypt-issuer
+services:
+  roles:
+   - name: external-dns
+   - name: cert-manager
+   - name: contour
+   - name: letsencrypt-issuer
+   - name: minio
+     options:
+       domain: minio.lab.ellin.net
 aks.be7fd3a2.azuresa.crossplane:
   roles:
    - name: external-dns
@@ -13,9 +22,7 @@ k3s-local:
   roles:
    - name: external-dns
    - name: cert-manager
-   - name: minio
-     options:
-       domain: minio.lab.ellin.net
+
 tap-build:
   roles:
    - name: external-dns
