--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -11,7 +11,8 @@ baseline:
    - name: letsencrypt-issuer
    - name: metallb
      options:
-       addresses: 192.168.4.100-192.168.4.115
+       metallb:
+         addresses: 192.168.4.100-192.168.4.115
 services:
   roles:
    - name: external-dns
