--- a/gitops/metallb/config.yaml
+++ b/gitops/metallb/config.yaml
@@ -7,3 +7,12 @@ metadata:
 spec:
   addresses:
   - #@ data.values.metallb.addresses
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: default
+  namespace: metallb-system
+spec:
+  ipAddressPools:
+  - first-pool
