--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -9,7 +9,7 @@ baseline:
    - name: external-dns
    - name: cert-manager
    - name: letsencrypt-issuer
-   - name: countour
+   - name: contour
    - name: metallb
      options:
        metallb:
