--- a/gitops/base/config/config-secret.yaml
+++ b/gitops/base/config/config-secret.yaml
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: #@ "tanzu-gitops-" + val.name
-  namespace: ellin-system
+  namespace: continuousdelivery-resources
 stringData:
 #@ if hasattr(val,"options"):  
   values.yaml: #@ yaml.encode(val.options)
