--- a/gitops/external-dns/external-dns-secret-export.yaml
+++ b/gitops/external-dns/external-dns-secret-export.yaml
@@ -4,7 +4,7 @@ apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretExport
 metadata:
   name: route53-credentials
-  namespace: ellin-system
+  namespace: continuousdelivery-resources
 spec:
   toNamespaces:
   - tanzu-system-service-discovery
@@ -16,4 +16,4 @@ metadata:
   name: route53-credentials
   namespace: tanzu-system-service-discovery
 spec:
-  fromNamespace: ellin-system
+  fromNamespace: continuousdelivery-resources
