--- a/gitops/letsencrypt-issuer/route53-credentials.yaml
+++ b/gitops/letsencrypt-issuer/route53-credentials.yaml
@@ -4,4 +4,4 @@ metadata:
   name: route53-credentials
   namespace: cert-manager
 spec:
-  fromNamespace: ellin-system
+  fromNamespace: continuousdelivery-resources
