--- a/gitops/ako/ako-install.yaml
+++ b/gitops/ako/ako-install.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: ako-install
-  namespace: ellin-system
+  namespace: continuousdelivery-resources
 spec:
   interval: 5m
   chart:
