--- a/gitops/crossplane-provider-config/aws-provider-config.yaml
+++ b/gitops/crossplane-provider-config/aws-provider-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: aws.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
-  namespace: ellin-system
+  namespace: continuousdelivery-resources
   name: aws-provider-266463974589
   annotations:
     kapp.k14s.io/change-group: "crossplane/providerconfig"
@@ -13,6 +13,6 @@ spec:
   credentials:
     source: Secret
     secretRef:
-      namespace: ellin-system
+      namespace: continuousdelivery-resources
       name: aws-secret
       key: creds.txt
