--- a/gitops/external-dns/external-dns-values.yaml
+++ b/gitops/external-dns/external-dns-values.yaml
@@ -39,7 +39,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: external-dns-values
-  namespace: ellin-system
+  namespace: continuousdelivery-resources
   annotations:
     kapp.k14s.io/change-rule: "delete after deleting externaldns"
 
