--- a/gitops/tap-svcs/config/pkgr.yaml
+++ b/gitops/tap-svcs/config/pkgr.yaml
@@ -2,7 +2,7 @@ apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageRepository
 metadata:
   name: tanzu-tap-repository
-  namespace: ellin-system
+  namespace: continuousdelivery-resources
   annotations:
     kapp.k14s.io/change-group: tap-repo
 spec:
