--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -14,22 +14,13 @@ sandbox:
      options:
        metallb:
          addresses: 192.168.4.130-192.168.4.145
-baseline:
-  roles:
-   - name: external-dns
-   - name: cert-manager
-   - name: letsencrypt-issuer
-   - name: contour
-   - name: metallb
-     options:
-       metallb:
-         addresses: 192.168.4.110-192.168.4.115
 services:
   roles:
    - name: external-dns
    - name: cert-manager
    - name: letsencrypt-issuer
    - name: contour
+   - name: nfs-provisioner
    - name: metallb
      options:
        metallb:
