--- a/gitops/nfs-provisioner/nfs-provisioner.yaml
+++ b/gitops/nfs-provisioner/nfs-provisioner.yaml
@@ -1,17 +1,21 @@
-apiVersion: helm.crossplane.io/v1beta1
-kind: Release
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
 metadata:
-  name: nfs-provisioner
+  name: nfs-subdir-external-provisioner-release
+  namespace: flux-system
 spec:
-  forProvider:
-    chart:
-      name: nfs-subdir-external-provisioner
-      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
-    namespace: nfs-provisioner
-    set:
-      - name: nfs.server
-        value: 192.168.1.6
-      - name: nfs.path
-        value: /volume2/vmware
-  providerConfigRef:
-    name: helm-provider
+  chart:
+    spec:
+      chart: nfs-subdir-external-provisioner
+      reconcileStrategy: ChartVersion
+      sourceRef:
+        kind: HelmRepository
+        name: helm-stable
+      version: '*'
+  interval: 10m
+  releaseName: harbor
+  values:
+    nfs:
+      server: 192.168.1.6
+      path: /volume2/vmware
+      
