--- a/gitops/nfs-provisioner/nfs-provisioner.yaml
+++ b/gitops/nfs-provisioner/nfs-provisioner.yaml
@@ -10,10 +10,10 @@ spec:
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: helm-stable
+        name: nfs-provisioner
       version: '*'
   interval: 10m
-  releaseName: harbor
+  releaseName: nfs-provisioner
   values:
     nfs:
       server: 192.168.1.6
