--- a/gitops/nfs-provisioner/nfs-provisioner.yaml
+++ b/gitops/nfs-provisioner/nfs-provisioner.yaml
@@ -15,6 +15,8 @@ spec:
   interval: 10m
   releaseName: nfs-provisioner
   values:
+    storageClass:
+      defaultClass: true
     nfs:
       server: 192.168.1.6
       path: /volume2/vmware
