--- a/gitops/minio/minio-release.yaml
+++ b/gitops/minio/minio-release.yaml
@@ -1,4 +1,15 @@
 #@ load("@ytt:data", "data")
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: minio
+  namespace: flux-system
+spec:
+  interval: 5m0s
+  provider: generic
+  url: https://charts.min.io/
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -13,26 +24,18 @@ spec:
       version: 12.6.12
       sourceRef:
         kind: HelmRepository
-        namespace: tanzu-helm-resources
-        name: bitnami
+        name: minio
+        namespace: flux-system
       interval: 1m
   values:
     persistence:
       storageClass: nfs-client
       size: 500Gi
-    apiIngress:
-      enabled: true
-      ingressClassName: traefik
-      hostname: #@ data.values.domain
-      annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-contour-cluster-issuer
-        traefik.ingress.kubernetes.io/router.entrypoints: websecure
-      tls: true  
     ingress:
       enabled: true
-      ingressClassName: traefik
-      hostname: #@ "api."+data.values.domain
+      hosts:
+       - #@ data.values.domain
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-contour-cluster-issuer
-        traefik.ingress.kubernetes.io/router.entrypoints: websecure
-      tls: true
+    tls:
+      enabled: true
