--- a/gitops/minio/minio-release.yaml
+++ b/gitops/minio/minio-release.yaml
@@ -9,7 +9,8 @@ spec:
   type: oci
   interval: 5m0s
   url: oci://registry-1.docker.io/bitnamicharts/minio
-
+  ref:
+    tag: 14.6.16
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
