--- a/gitops/harbor/harbor-helm-repo.yaml
+++ b/gitops/harbor/harbor-helm-repo.yaml
@@ -1,8 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: harbor
+---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: harbor
-  namespace: flux-system
+  namespace: harbor
 spec:
   interval: 5m0s
   provider: generic
