--- a/gitops/harbor/harbor-release.yaml
+++ b/gitops/harbor/harbor-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: harbor
-  namespace: flux-system
+  namespace: harbor
 spec:
   chart:
     spec:
