--- a/gitops/minio/minio-release.yaml
+++ b/gitops/minio/minio-release.yaml
@@ -1,10 +1,15 @@
 #@ load("@ytt:data", "data")
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: minio
+---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
   name: minio-bitnami
-  namespace: flux-system
+  namespace: minio
 spec:
   type: oci
   interval: 5m0s
@@ -16,7 +21,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: minio-bitnami
-  namespace: flux-system
+  namespace: minio
 spec:
   interval: 5m
   chartRef:
