--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -5,11 +5,12 @@ default:
    - name: cert-manager
    - name: contour
    - name: letsencrypt-issuer
-sandbox:
+lab:
   roles:
    - name: external-dns
    - name: cert-manager
    - name: letsencrypt-issuer
+   - name: nfs-provisioner
    - name: contour
    - name: metallb
      options:
